# imu_xsarm_control

./: README.md  package.xml  setup.cfg  setup.py
imu_arm_control/: imu_wx200_control.py
launch/: bno055_params.yaml  imu_wx200.launch.py
